[2025-11-27 이기정] 카카오MAP API , 오피넷 API 연결 및 WEBCONFIG 수정

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5d0972add49b5326a276248f83b7116b&libraries=services"></script>
     <title>React App</title>
     <!-- head 내부: 폰트 & Font Awesome -->
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" />
